--- a/index.html
+++ b/index.html
@@ -878,6 +878,46 @@
 </section>
 <!-- End Recent Posts Section -->
 
+<section class="creator-feature">
+  <div class="container text-center">
+    <h2 class="section-title">🌟 Creator Spotlight</h2>
+    <p class="section-subtitle">Meet our featured content creator</p>
+
+    <div class="creator-card">
+      <img src="/assets/img/hero-img.jpg" alt="Wander with Reema" class="creator-avatar">
+
+      <h3>Wander with Reema</h3>
+      <p>Travel, Lifestyle, Product Reviews & Shorts that inspire ✨</p>
+
+      <a href="/wanderwithreema" class="btn btn-primary">View Profile</a>
+    </div>
+  </div>
+</section>
+    
+<style>
+.creator-feature {
+  background: #fefefe;
+  padding: 60px 20px;
+}
+
+.creator-card {
+  max-width: 400px;
+  margin: auto;
+  padding: 20px;
+  border-radius: 12px;
+  box-shadow: 0 6px 18px rgba(0,0,0,0.05);
+  background: #fff;
+}
+
+.creator-avatar {
+  width: 120px;
+  height: 120px;
+  border-radius: 50%;
+  object-fit: cover;
+  margin-bottom: 16px;
+}
+  </style>
+
 
     <!-- Contact Section -->
 <section id="contact" class="contact section">
