--- a/footer.html
+++ b/footer.html
@@ -17,6 +17,7 @@
         <h4>Useful Links</h4>
         <ul>
           <li><i class="bi bi-chevron-right"></i> <a href="/blog">Blog</a></li>
+          <li><i class="bi bi-chevron-right"></i> <a href="/wanderwithreema">Creator Spotlight</a></li>
           <li><i class="bi bi-chevron-right"></i> <a href="/about-us">About us</a></li>
           <li><i class="bi bi-chevron-right"></i> <a href="/contact">Contact Us</a></li>
           <li><i class="bi bi-chevron-right"></i> <a href="/terms-and-conditions">Terms and Conditions</a></li>
