--- a/index.html
+++ b/index.html
@@ -884,7 +884,7 @@
     <p class="section-subtitle">Meet our featured content creator</p>
 
     <div class="creator-card">
-      <img src="/assets/img/hero-img.jpg" alt="Wander with Reema" class="creator-avatar">
+      <img src="/wanderwithreema/assets/img/hero-img.jpg" alt="Wander with Reema" class="creator-avatar">
 
       <h3>Wander with Reema</h3>
       <p>Travel, Lifestyle, Product Reviews & Shorts that inspire ✨</p>
