--- a/iamreemaroy/index.html
+++ b/iamreemaroy/index.html
@@ -3,17 +3,39 @@
 
 <head>
   <meta charset="utf-8">
-  <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Wander with Reema | Explore Travel, Lifestyle & Influencer Content</title>
-  <meta name="description" content="Wander with Reema: exploring travel, style, food & lifestyle. Join Reema’s journey through Short videos, reviews, adventures & more on BizzNist." />
-  <meta name="keywords" content="Wander with Reema, Reema travel, Reema lifestyle, travel influencer, short video reviews, BizzNist influencer, fashion, food reviews, wanderwithreema" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Reema Roy | I Am Reema Roy | Multi-Talented Creator & Entrepreneur</title>
+  <meta name="description" content="Reema Roy is a multi-talented creator — YouTuber, influencer, content creator, lifestyle and skincare enthusiast, entrepreneur, and personal brand owner. Follow her for travel, skincare, unboxing, and lifestyle content.">
 
-<!-- Open Graph / Social Sharing (optional but recommended) -->
-<meta property="og:title" content="Wander with Reema | Explore Travel, Lifestyle & Influencer Content" />
-<meta property="og:description" content="Wander with Reema: exploring travel, style, food & lifestyle. Join Reema’s journey through short videos, reviews, adventures & more." />
-<meta property="og:type" content="website" />
-<meta property="og:url" content="https://www.bizznist.com/wanderwithReema" />
-<meta property="og:image" content="https://www.bizznist.com/path/to/your/representative-image.jpg" />
+  <!-- Schema Markup for Google Knowledge Graph -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Person",
+    "name": "Reema Roy",
+    "alternateName": ["itsreemaroy", "iamreemaroy"],
+    "url": "https://www.bizznist.com/iamreemaroy",
+    "image": "https://www.bizznist.com/images/reema-headshot.jpg",
+    "sameAs": [
+      "https://www.youtube.com/@iamreemaroy",
+      "https://www.instagram.com/itsreemaroy/",
+      "https://www.facebook.com/iamreemaroy",
+      "https://www.linkedin.com/in/iamreemaroy/"
+    ],
+    "jobTitle": "YouTuber, Influencer, Content Creator, Entrepreneur, Lifestyle & Skincare Enthusiast",
+    "worksFor": {
+      "@type": "Organization",
+      "name": "Reema Roy"
+    },
+    "description": "Reema Roy is a multi-talented creator — YouTuber, influencer, content creator, lifestyle and skincare enthusiast, entrepreneur, and personal brand owner. She shares content across travel, skincare, unboxing, and lifestyle categories."
+  }
+  </script>
+
+  <meta property="og:title" content="Reema Roy | I Am Reema Roy | Multi-Talented Creator & Entrepreneur">
+  <meta property="og:description" content="Reema Roy is a multi-talented creator sharing content on YouTube, Instagram, and more. Follow for travel, skincare, unboxing, and lifestyle inspiration.">
+  <meta property="og:image" content="https://www.bizznist.com/images/reema-headshot.jpg">
+  <meta property="og:url" content="https://www.bizznist.com/iamreemaroy">
+  <meta property="og:type" content="website">
 
 
   <!-- Favicons -->
@@ -335,8 +357,8 @@ a.btn.btn-instagram {
 
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up" style="padding-bottom: 20px;">
-        <h2>Wander with Reema</h2>
-        <h3>Real Stories. Real Style. Real You.</h3>
+        <h2>Reema Roy</h2>
+        <h3>Multi-Talented Creator | YouTuber | Influencer | Lifestyle & Skincare Enthusiast | Entrepreneur | Personal Brand Owner</h3>
         <p>Welcome to Wander with Reema, your passport to experiences beyond ordinary. I’m Reema Roy — traveler, storyteller, food lover, fashion enthusiast, and lifelong explorer. Through short videos, reviews, and immersive journeys, I bring you right alongside me as I discover hidden gems, test lifestyle products, and capture the beauty of everyday moments.</p>
         <br>
         <p>Whether I’m wandering through new cities, discovering local flavors, styling on-the-go, or reviewing skincare & fashion finds — Wander with Reema is more than content. It’s a community built on curiosity, authenticity, and inspiration.</p>
@@ -434,9 +456,10 @@ a.btn.btn-instagram {
           <h4>Follow Me</h4>
           <p>Stay connected with me on social media & never miss a moment.</p>
           <div class="social-links d-flex" style="display: inline-flex !important;">
-            <a href="https://www.youtube.com/@WanderwithReema"><i class="bi bi-youtube"></i></a>
-            <a href="https://www.instagram.com/wanderwithreema/"><i class="bi bi-instagram"></i></a>
-            <a href="https://www.facebook.com/wandewithreema/"><i class="bi bi-facebook"></i></a>
+            <a href="https://www.youtube.com/@iamreemaroy"><i class="bi bi-youtube"></i></a>
+            <a href="https://www.instagram.com/itsreemaroy/"><i class="bi bi-instagram"></i></a>
+            <a href="https://www.facebook.com/iamreemaroy/"><i class="bi bi-facebook"></i></a>
+            <a href="https://www.linkedin.com/in/iamreemaroy/"><i class="bi bi-linkedin"></i></a>
           </div>
         </div>
 
@@ -444,7 +467,7 @@ a.btn.btn-instagram {
     </div>
 
     <div class="container copyright text-center mt-4">
-      <p>© <span>Copyright</span> <strong class="px-1 sitename"><a href="https://www.youtube.com/@WanderwithReema">Wander With Reema</a></strong> <span>All Rights Reserved</span></p>
+      <p>© <span>Copyright</span> <strong class="px-1 sitename"><a href="https://www.youtube.com/@iamreemaroy">Reema Roy</a></strong> <span>All Rights Reserved</span></p>
       <div class="credits">
         Designed by <a href="https://www.bizznist.com">BizzNist</a>
       </div>
