--- a/iamreemaroy/index.html
+++ b/iamreemaroy/index.html
@@ -320,6 +320,18 @@ a.btn.btn-instagram {
 
 </head>
 
+  <header>
+  <img src="https://www.bizznist.com/images/reema-headshot.jpg" alt="Reema Roy">
+  <h1>Reema Roy</h1>
+  <p>Multi-Talented Creator | YouTuber | Influencer | Lifestyle & Skincare Enthusiast | Entrepreneur | Personal Brand Owner</p>
+  <div class="social-links">
+    <a href="https://www.youtube.com/@iamreemaroy" target="_blank">YouTube</a>
+    <a href="https://www.instagram.com/itsreemaroy/" target="_blank">Instagram</a>
+    <a href="https://www.facebook.com/iamreemaroy" target="_blank">Facebook</a>
+    <a href="https://www.linkedin.com/in/iamreemaroy/" target="_blank">LinkedIn</a>
+  </div>
+</header>
+
 <body class="index-page">
 
   <main class="main">
