--- a/wanderwithreema/index.html
+++ b/wanderwithreema/index.html
@@ -436,7 +436,6 @@ a.btn.btn-instagram {
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up" style="padding-bottom: 20px;">
         <h2>Reema Roy</h2>
-        <h3>Multi-Talented Creator | YouTuber | Influencer | Lifestyle & Skincare Enthusiast | Entrepreneur | Personal Brand Owner</h3>
         <p>Hello! I'm Reema Roy, a multi-talented creator from India. I share my passion for travel, skincare, unboxing, lifestyle, and entrepreneurship with my audience. My brand, I             Am Reema Roy, represents authenticity, creativity, and inspiration across multiple categories.
         </p>
       </div><!-- End Section Title -->
@@ -444,13 +443,13 @@ a.btn.btn-instagram {
       <div class="container">
           <div class="row justify-content-center text-center">
             <div class="container section-title" data-aos="fade-up" data-aos-delay="100" style="padding-bottom: 0px;">
-            <p>My Content Categories</p>
+            <h3>My Content Categories</h3>
             <ul class="styled-list">
-              <li><spam>Travel:</spam> Discover my journeys, travel tips, and personal experiences across India and beyond.</li>
-              <li><spam>Skincare & Beauty:</spam> Honest reviews, skincare routines, and lifestyle tips for healthy living.</li>
-              <li><spam>Unboxing:</spam> Fun and engaging product unboxings with detailed insights.</li>
-              <li><spam>Lifestyle & Personal Growth:</spam> Productivity, self-care, motivation, and everyday life inspiration.</li>
-              <li><spam>YouTube & Social Media:</spam> Original videos, reels, shorts, and stories sharing my creativity with my audience.</li>
+              <li><span>Travel:</span> Discover my journeys, travel tips, and personal experiences across India and beyond.</li>
+              <li><span>Skincare & Beauty:</span> Honest reviews, skincare routines, and lifestyle tips for healthy living.</li>
+              <li><span>Unboxing:</span> Fun and engaging product unboxings with detailed insights.</li>
+              <li><span>Lifestyle & Personal Growth:</span> Productivity, self-care, motivation, and everyday life inspiration.</li>
+              <li><span>YouTube & Social Media:</span> Original videos, reels, shorts, and stories sharing my creativity with my audience.</li>
             </ul>
         
           </div>
