--- a/wanderwithreema/index.html
+++ b/wanderwithreema/index.html
@@ -477,6 +477,8 @@ a.btn.btn-instagram {
             <a href="https://www.instagram.com/itsreemaroy/"><i class="bi bi-instagram"></i></a>
             <a href="https://www.facebook.com/iamreemaroy/"><i class="bi bi-facebook"></i></a>
             <a href="https://www.linkedin.com/in/iamreemaroy/"><i class="bi bi-linkedin"></i></a>
+            <a href="https://x.com/iamreemaroy"><i class="bi bi-x"></i></a>
+            <a href="https://www.pinterest.com/iamreemaroy/"><i class="bi bi-pinterest"></i></a>
           </div>
         </div>
 
