--- a/wanderwithreema/index.html
+++ b/wanderwithreema/index.html
@@ -425,7 +425,7 @@ a.btn.btn-instagram {
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up" style="padding-bottom: 20px;">
         <h2>Contact & Collaborations</h2>
-        <p>For brand partnerships, collaboration opportunities, or inquiries, feel free to <a href="mailto:royreema1997@gmail.com">email</a> me. I love connecting with creative minds and sharing value with my audience!</p>
+        <h5>For brand partnerships, collaboration opportunities, or inquiries, feel free to <a href="mailto:royreema1997@gmail.com">email</a> me. I love connecting with creative minds and sharing value with my audience!</h5>
       </div><!-- End Section Title -->
       </div>
     </section><!-- /Brand Section -->
