--- a/wanderwithreema/index.html
+++ b/wanderwithreema/index.html
@@ -315,7 +315,15 @@ a.btn.btn-instagram {
 .styled-list li span {
   font-size: 18px;
 }
-
+hero-content {
+  text-align: center;
+  padding-top: 10px;
+}
+header{
+    text-align: center;
+    background-color: #d4853a3d;
+    padding-bottom: 20px;
+}
 </style>
 
 </head>
@@ -325,46 +333,16 @@ a.btn.btn-instagram {
   <h1>Reema Roy</h1>
   <p>Multi-Talented Creator | YouTuber | Influencer | Lifestyle & Skincare Enthusiast | Entrepreneur | Personal Brand Owner</p>
   <div class="social-links">
-    <a href="https://www.youtube.com/@iamreemaroy" target="_blank">YouTube</a>
-    <a href="https://www.instagram.com/itsreemaroy/" target="_blank">Instagram</a>
-    <a href="https://www.facebook.com/iamreemaroy" target="_blank">Facebook</a>
-    <a href="https://www.linkedin.com/in/iamreemaroy/" target="_blank">LinkedIn</a>
+    <a href="https://www.youtube.com/@iamreemaroy" class="btn btn-instagram" rel="noopener noreferrer" target="_blank">Subscribe on YouTube</a>
+    <a href="https://www.instagram.com/itsreemaroy/" class="btn btn-instagram" rel="noopener noreferrer" target="_blank">Follow on Instagram</a>
+    <a href="https://www.facebook.com/iamreemaroy" class="btn btn-instagram" rel="noopener noreferrer" target="_blank">Follow on Facebook</a>
+    <a href="https://www.linkedin.com/in/iamreemaroy/" class="btn btn-instagram" rel="noopener noreferrer" target="_blank">Connect on LinkedIn</a>
   </div>
 </header>
 
 <body class="index-page">
-
-  <main class="main">
-
-    <!-- Hero Section -->
-    <section id="hero" class="hero-section">
-      <div class="overlay"></div>
-    </section>
-      <div class="hero-content" style="
-                  text-align: center;
-                  padding-top: 10px;
-              ">
-    <div class="hero-buttons">
-     
-      <a href="https://www.youtube.com/@iamreemaroy?sub_confirmation=1" 
-       class="btn btn-youtube" 
-       target="_blank" 
-       rel="noopener noreferrer">
-       Subscribe on YouTube
-    </a>
-
-      <a href="https://www.instagram.com/itsreemaroy/" 
-         class="btn btn-instagram" 
-         target="_blank" 
-         rel="noopener noreferrer">
-         Follow on Instagram
-      </a>
-     
-    </div>
-  </div>
-    </section><!-- /Hero Section -->
-
-        <!-- Youtube Section -->
+<main class="main">
+    <!-- Youtube Section -->
     <section id="gallery" class="gallery section">
 
       <!-- Section Title -->
