--- a/wanderwithreema/index.html
+++ b/wanderwithreema/index.html
@@ -346,7 +346,7 @@ header{
     <section id="gallery" class="gallery section">
 
       <!-- Section Title -->
-      <div class="container section-title" data-aos="fade-up">
+      <div class="container section-title" data-aos="fade-up" style="padding: 20px; background-color: #e2c5ea !important; margin-top: 10px;">
         <h2>Watch My Shorts</h2>
           <p>Quick, fun, and real — dive into my world through YouTube Shorts. From travel bites and product picks to beauty moments and spontaneous vlogs, these snappy clips bring you closer to my everyday adventures.</p>
       </div><!-- End Section Title -->
@@ -401,7 +401,7 @@ header{
     <!-- Brand Section -->
     <section id="brand" class="about section light-background" style="padding-bottom: 0px;padding-top: 20px;">
       <!-- Section Title -->
-      <div class="container section-title" data-aos="fade-up" style="padding-bottom: 20px;">
+      <div class="container section-title" data-aos="fade-up" style="padding: 20px; background-color: #e2c5ea !important;">
         <h2>Contact & Collaborations</h2>
         <h5>For brand partnerships, collaboration opportunities, or inquiries, feel free to <a href="mailto:royreema1997@gmail.com">email</a> me. I love connecting with creative minds and sharing value with my audience!</h5>
       </div><!-- End Section Title -->
@@ -412,13 +412,13 @@ header{
     <!-- About Section -->
     <section id="about" class="about section light-background" style="padding-bottom: 0px;padding-top: 20px;">
       <!-- Section Title -->
-      <div class="container section-title" data-aos="fade-up" style="padding-bottom: 20px;">
+      <div class="container section-title" data-aos="fade-up" style="padding-bottom: 20px; background-color: #f2f0dd !important;">
         <h2>Reema Roy</h2>
         <p>Hello! I'm Reema Roy, a multi-talented creator from India. I share my passion for travel, skincare, unboxing, lifestyle, and entrepreneurship with my audience. My brand, I             Am Reema Roy, represents authenticity, creativity, and inspiration across multiple categories.
         </p>
       </div><!-- End Section Title -->
 
-      <div class="container">
+      <div class="container" style="background-color: #f2f0dd !important;">
           <div class="row justify-content-center text-center">
             <div class="container section-title" data-aos="fade-up" data-aos-delay="100" style="padding-bottom: 0px;">
             <h3>My Content Categories</h3>
