--- a/wanderwithreema/index.html
+++ b/wanderwithreema/index.html
@@ -448,7 +448,7 @@ header{
     <div class="container footer-top">
       <div class="row gy-1">
         <div class="col-md-12" style="padding-top: 12px; padding-bottom: 12px; text-align: center;">
-          <h4>Follow Me</h4>
+          <h4 style="color: #ffffff;">Follow Me</h4>
           <p>Stay connected with me on social media & never miss a moment.</p>
           <div class="social-links d-flex" style="display: inline-flex !important;">
             <a href="https://www.youtube.com/@iamreemaroy"><i class="bi bi-youtube"></i></a>
@@ -463,7 +463,7 @@ header{
       </div>
     </div>
 
-    <div class="container copyright text-center mt-4">
+    <div class="container copyright text-center mt-4" style="background-color: #f5e2d2;">
       <p>© <span>Copyright</span> <strong class="px-1 sitename"><a href="https://www.youtube.com/@iamreemaroy">Reema Roy</a></strong> <span>All Rights Reserved</span></p>
       <div class="credits">
         Designed by <a href="https://www.bizznist.com">BizzNist</a>
