--- a/wanderwithreema/index.html
+++ b/wanderwithreema/index.html
@@ -4,8 +4,12 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Reema Roy | I Am Reema Roy | Multi-Talented Creator & Entrepreneur</title>
-  <meta name="description" content="Reema Roy is a multi-talented creator — YouTuber, influencer, content creator, lifestyle and skincare enthusiast, entrepreneur, and personal brand owner. Follow her for travel, skincare, unboxing, and lifestyle content.">
+  <title>Reema Roy | I Am Reema Roy | Official Website – Travel, Skincare, Lifestyle & Unboxing Creator</title>
+  <meta name="description" content="Reema Roy is a multi-talented content creator, YouTuber, and lifestyle influencer. Known as 'I Am Reema Roy', she shares honest skincare reviews,       travel vlogs, unboxing experiences, and lifestyle inspiration across YouTube, Instagram, and more.">
+  <meta name="keywords" content="Reema Roy, I Am Reema Roy, itsreemaroy, iamreemaroy, travel influencer, skincare influencer, lifestyle creator, unboxing videos, beauty vlogs, content     creator India">
+  <link rel="canonical" href="https://www.bizznist.com/iamreemaroy" />
+  <meta name="author" content="Reema Roy">
+
 
   <!-- Schema Markup for Google Knowledge Graph -->
   <script type="application/ld+json">
