--- a/wanderwithreema/index.html
+++ b/wanderwithreema/index.html
@@ -13,27 +13,30 @@
 
   <!-- Schema Markup for Google Knowledge Graph -->
   <script type="application/ld+json">
-  {
-    "@context": "https://schema.org",
-    "@type": "Person",
-    "name": "Reema Roy",
-    "alternateName": ["itsreemaroy", "iamreemaroy"],
-    "url": "https://www.bizznist.com/iamreemaroy",
-    "image": "https://www.bizznist.com/images/reema-headshot.jpg",
-    "sameAs": [
-      "https://www.youtube.com/@iamreemaroy",
-      "https://www.instagram.com/itsreemaroy/",
-      "https://www.facebook.com/iamreemaroy",
-      "https://www.linkedin.com/in/iamreemaroy/"
-    ],
-    "jobTitle": "YouTuber, Influencer, Content Creator, Entrepreneur, Lifestyle & Skincare Enthusiast",
-    "worksFor": {
-      "@type": "Organization",
-      "name": "Reema Roy"
-    },
-    "description": "Reema Roy is a multi-talented creator — YouTuber, influencer, content creator, lifestyle and skincare enthusiast, entrepreneur, and personal brand owner. She shares content across travel, skincare, unboxing, and lifestyle categories."
-  }
-  </script>
+{
+  "@context": "https://schema.org",
+  "@type": "Person",
+  "name": "Reema Roy",
+  "alternateName": ["I Am Reema Roy", "itsreemaroy"],
+  "description": "Reema Roy is a multi-talented creator — YouTuber, influencer, lifestyle and skincare enthusiast, traveler, and content creator from India.",
+  "url": "https://www.bizznist.com/iamreemaroy",
+  "image": "https://www.bizznist.com/path-to-your-profile-photo.jpg",
+  "sameAs": [
+    "https://www.youtube.com/@iamreemaroy",
+    "https://www.instagram.com/itsreemaroy/",
+    "https://www.linkedin.com/in/iamreemaroy/",
+    "https://facebook.com/iamreemaroy",
+    "https://www.pinterest.com/iamreemaroy/",
+    "https://twitter.com/iamreemaroy",
+    "https://medium.com/@iamreemaroy",
+    "https://www.tiktok.com/@iamreemaroy"
+    "https://linktr.ee/iamreemaroy"
+  ],
+  "jobTitle": "Digital Creator | Influencer | YouTuber | Lifestyle & Skincare Enthusiast",
+  "nationality": "Indian"
+}
+</script>
+
 
   <meta property="og:title" content="Reema Roy | I Am Reema Roy | Multi-Talented Creator & Entrepreneur">
   <meta property="og:description" content="Reema Roy is a multi-talented creator sharing content on YouTube, Instagram, and more. Follow for travel, skincare, unboxing, and lifestyle inspiration.">
