--- a/wanderwithreema/index.html
+++ b/wanderwithreema/index.html
@@ -353,12 +353,12 @@ header{
     <section id="gallery" class="gallery section">
 
       <!-- Section Title -->
-      <div class="container section-title" data-aos="fade-up" style="padding: 20px; background-color: #e2c5ea !important; margin-top: 10px;">
+      <div class="container section-title" data-aos="fade-up" style="padding: 20px; background-color: #e2c5ea !important;">
         <h2>Watch My Shorts</h2>
           <p>Quick, fun, and real — dive into my world through YouTube Shorts. From travel bites and product picks to beauty moments and spontaneous vlogs, these snappy clips bring you closer to my everyday adventures.</p>
       </div><!-- End Section Title -->
 
-      <div class="container-fluid" data-aos="fade-up" data-aos-delay="100">
+      <div class="container-fluid" data-aos="fade-up" data-aos-delay="100" style="background-color: #e2c5ea !important; margin-top: 10px;">
 
         <div class="swiper init-swiper">
           <script type="application/json" class="swiper-config">
@@ -454,7 +454,7 @@ header{
 
     <div class="container footer-top">
       <div class="row gy-1">
-        <div class="col-md-12" style="padding-top: 12px; padding-bottom: 12px; text-align: center;">
+        <div class="col-md-12" style="padding-top: 12px; padding-bottom: 12px; text-align: center; background-color: #271dc1;color: #ffffff;">
           <h4 style="color: #ffffff;">Follow Me</h4>
           <p>Stay connected with me on social media & never miss a moment.</p>
           <div class="social-links d-flex" style="display: inline-flex !important;">
