Change max-width of styled-list to 100%

--- a/wanderwithreema/index.html
+++ b/wanderwithreema/index.html
@@ -306,7 +306,7 @@ a.btn.btn-instagram {
   list-style: none;
   padding: 0;
   margin: 20px auto;
-  max-width: 600px;
+  max-width: 100%;
   text-align: left;
   display: inline-block;
 }
