--- a/wanderwithreema/index.html
+++ b/wanderwithreema/index.html
@@ -312,7 +312,7 @@ a.btn.btn-instagram {
 }
 
 .styled-list li {
-  font-size: 18px;
+  font-size: 16px;
   display: flex;
   align-items: center;
   gap: 10px;
@@ -320,7 +320,8 @@ a.btn.btn-instagram {
 }
 
 .styled-list li span {
-  font-size: 18px;
+  font-size: 16px;
+  font-weight: 600;
 }
 hero-content {
   text-align: center;
@@ -340,10 +341,10 @@ header{
   <h1>Reema Roy</h1>
   <p>Multi-Talented Creator | YouTuber | Influencer | Lifestyle & Skincare Enthusiast | Entrepreneur | Personal Brand Owner</p>
   <div class="social-links">
-    <a href="https://www.youtube.com/@iamreemaroy" class="btn btn-instagram" rel="noopener noreferrer" target="_blank">Subscribe on YouTube</a>
+    <a href="https://www.youtube.com/@iamreemaroy" class="btn btn-youtube" rel="noopener noreferrer" target="_blank">Subscribe on YouTube</a>
     <a href="https://www.instagram.com/itsreemaroy/" class="btn btn-instagram" rel="noopener noreferrer" target="_blank">Follow on Instagram</a>
-    <a href="https://www.facebook.com/iamreemaroy" class="btn btn-instagram" rel="noopener noreferrer" target="_blank">Follow on Facebook</a>
-    <a href="https://www.linkedin.com/in/iamreemaroy/" class="btn btn-instagram" rel="noopener noreferrer" target="_blank">Connect on LinkedIn</a>
+    <a href="https://www.facebook.com/iamreemaroy" class="btn btn-facebook" rel="noopener noreferrer" target="_blank">Follow on Facebook</a>
+    <a href="https://www.linkedin.com/in/iamreemaroy/" class="btn btn-linkedin" rel="noopener noreferrer" target="_blank">Connect on LinkedIn</a>
   </div>
 </header>
 
