--- a/wanderwithreema/index.html
+++ b/wanderwithreema/index.html
@@ -305,7 +305,7 @@ a.btn.btn-instagram {
   .styled-list {
   list-style: none;
   padding: 0;
-  margin: 20px auto;
+  margin: 5px 5px 10px 5px;
   max-width: 100%;
   text-align: left;
   display: inline-block;
@@ -313,10 +313,11 @@ a.btn.btn-instagram {
 
 .styled-list li {
   font-size: 16px;
-  display: flex;
+  display: inline-block;
   align-items: center;
   gap: 10px;
   line-height: 1.5;
+  padding-bottom: 15px;
 }
 
 .styled-list li span {
