--- a/wanderwithreema/index.html
+++ b/wanderwithreema/index.html
@@ -421,7 +421,7 @@ header{
     <!-- About Section -->
     <section id="about" class="about section light-background" style="padding-bottom: 0px;padding-top: 20px;">
       <!-- Section Title -->
-      <div class="container section-title" data-aos="fade-up" style="padding-bottom: 20px; background-color: #f2f0dd !important;">
+      <div class="container section-title" data-aos="fade-up" style="padding: 20px; background-color: #f2f0dd !important;">
         <h2>Reema Roy</h2>
         <p>Hello! I'm Reema Roy, a multi-talented creator from India. I share my passion for travel, skincare, unboxing, lifestyle, and entrepreneurship with my audience. My brand, I             Am Reema Roy, represents authenticity, creativity, and inspiration across multiple categories.
         </p>
