--- a/wanderwithreema/index.html
+++ b/wanderwithreema/index.html
@@ -290,7 +290,19 @@ a.btn.btn-instagram {
   color: white;
   padding-left: 10px;
   padding-right: 10px;
-}    
+}   
+a.btn.btn-facebook {
+  background: #1877F2;
+  color: white;
+  padding-left: 10px;
+  padding-right: 10px;
+}   
+a.btn.btn-linkedin {
+  background: #0077B5;
+  color: white;
+  padding-left: 10px;
+  padding-right: 10px;
+}       
 @media (max-width: 768px) {
   .hero-section {
     min-height: 40vh;
@@ -307,7 +319,7 @@ a.btn.btn-instagram {
   padding: 0;
   margin: 5px 5px 10px 5px;
   max-width: 100%;
-  text-align: left;
+  text-align: center;
   display: inline-block;
 }
 
@@ -342,10 +354,10 @@ header{
   <h1>Reema Roy</h1>
   <p>Multi-Talented Creator | YouTuber | Influencer | Lifestyle & Skincare Enthusiast | Entrepreneur | Personal Brand Owner</p>
   <div class="social-links">
-    <a href="https://www.youtube.com/@iamreemaroy" class="btn btn-youtube" rel="noopener noreferrer" target="_blank">Subscribe on YouTube</a>
-    <a href="https://www.instagram.com/itsreemaroy/" class="btn btn-instagram" rel="noopener noreferrer" target="_blank">Follow on Instagram</a>
-    <a href="https://www.facebook.com/iamreemaroy" class="btn btn-facebook" rel="noopener noreferrer" target="_blank">Follow on Facebook</a>
-    <a href="https://www.linkedin.com/in/iamreemaroy/" class="btn btn-linkedin" rel="noopener noreferrer" target="_blank">Connect on LinkedIn</a>
+    <a href="https://www.youtube.com/@iamreemaroy" class="btn btn-youtube" rel="noopener noreferrer" target="_blank">YouTube</a>
+    <a href="https://www.instagram.com/itsreemaroy/" class="btn btn-instagram" rel="noopener noreferrer" target="_blank">Instagram</a>
+    <a href="https://www.facebook.com/iamreemaroy" class="btn btn-facebook" rel="noopener noreferrer" target="_blank">Facebook</a>
+    <a href="https://www.linkedin.com/in/iamreemaroy/" class="btn btn-linkedin" rel="noopener noreferrer" target="_blank">LinkedIn</a>
   </div>
 </header>
 
