Update styled-list CSS with !important rules
Added !important to display and align-items styles.

--- a/iamreemaroy/index.html
+++ b/iamreemaroy/index.html
@@ -325,8 +325,8 @@ a.btn.btn-linkedin {
 
 .styled-list li {
   font-size: 16px;
-  display: inline-block;
-  align-items: center;
+  display: inline-block !important;
+  align-items: center !important;
   gap: 10px;
   line-height: 1.5;
   padding-bottom: 15px;
