--- a/iamreemaroy/index.html
+++ b/iamreemaroy/index.html
@@ -343,7 +343,7 @@ hero-content {
 header{
     text-align: center;
     background-color: #d4853a3d;
-    padding-bottom: 20px;
+    padding: 20px;
 }
 </style>
 
