--- a/iamreemaroy/index.html
+++ b/iamreemaroy/index.html
@@ -313,6 +313,9 @@ a.btn.btn-linkedin {
   .hero-section p {
     font-size: 1rem;
   }
+  .container-fluid.aos-init.aos-animate {
+    padding: 20px;
+  }
 }
   .styled-list {
   list-style: none;
