--- a/iamreemaroy/index.html
+++ b/iamreemaroy/index.html
@@ -352,7 +352,7 @@ header{
 
 </head>
 
-  <header>
+  <header class="container section-title aos-init aos-animate">
   <img src="https://www.bizznist.com/images/reema-headshot.jpg" alt="Reema Roy">
   <h1>Reema Roy</h1>
   <p>Multi-Talented Creator | YouTuber | Influencer | Lifestyle & Skincare Enthusiast | Entrepreneur | Personal Brand Owner</p>
